	- Add UNDERWATER_VISION view distance option so ships require sonar to detect submerged subs, and submerged subs require sonar to detect other vessels vs being able to see them as long as they are within guard range.
	- Add attack logic for gun-armed submarines when BULLET_WATER_DRAG is disabled.
	- AI now respect target priority settings when looking at landed or splashed targets.
- Countermeasures:
	- Add missing Active Sonar countermeasure.
- Detectors:
	- Fix Radars utilizing a max of 3 locks, regardless of radar-lock capable radars present on a vessel.
	- Enemy passive sonars no longer show up on the Radar Warning Reciever.
	- IRSTs now return the hottest enemy target they detect, rather than whatever is first on the targets list when using it for manually firing heatseeking missiles.
	- Fix multiple radars locking the same targets; radars will now properly distribute targets to lock amongst themselves.
	- Fix Radar GUI not properly displaying radars using custom radarTransforms.
- Weapons:
	- Bullets now take relative velocity into account when calculating damage.
	- Fix Dual-mode APS turrets getting slaved to radar when firing on standard targets and not subsequently engaging incoming missile targets.
	- Fix APS occasionally getting stuck on phantom targets.
	- Missiles:
		- Fix missiles not firing on surface ships.
		- Missiles now properly receive explosive damage from point defense HE rounds/interceptor missiles in paintball mode.
		- Fix missiles occasionally getting stuck when fired from VLS.
		- Fix Missiles failing LOS check due to kerbins curvature for ship vs ship engagements.
		- Fix for GPS missiles fired from multiMissileLaunchers losing lock when fired.
		- Fix guidance type = none missiles detonating 5km from launcher.
		- Fix NRe from manually firing GPS missiles from a multimissilelauncher.
		- AIs attempting to dumbfire multimissileLaunchers will now take missile launch vector into account instead of vessel prograde.