@@ -8,6 +8,7 @@
 	- Add UNDERWATER_VISION view distance option so ships require sonar to detect submerged subs, and submerged subs require sonar to detect other vessels vs being able to see them as long as they are within guard range.
 	- Add attack logic for gun-armed submarines when BULLET_WATER_DRAG is disabled.
 	- AI now respect target priority settings when looking at landed or splashed targets.
+	- Fix issue with ground vehicle AIs not selecting missiles against ground targets in some circumstances.
 - Countermeasures:
 	- Add missing Active Sonar countermeasure.
 - Detectors:
@@ -30,7 +31,9 @@
 		- Fix NRe from manually firing GPS missiles from a multimissilelauncher.
 		- AIs attempting to dumbfire multimissileLaunchers will now take missile launch vector into account instead of vessel prograde.
 		- Adds new Settings option 'LIMITED_ORDINANCE' to clamp multimissilelaunchers and reloadable rails to a single salvo's worth of ammo. 
-
+		- Fixed GPS coords not updating for bombs.
+		- Fixed occasional NRE when using laser-guided missiles in a surface to surface role.
+		- AI can now aim unguided/dumbfired missiles with the missile turret.
 v1.6.6.0
 IMPROVEMENTS / FIXES
 - General:
